style(projects): update button styling

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                     </div>
                     <div>
                         <a href="https://computestore.ca"  target="_blank">
-                            <button class="demo-button button-primary">Demo</button>
+                            <button class="live-demo-button button-primary">Live Demo</button>
                         </a>
                         <a href="https://github.com/reshawnlofters/e-commerce-store" target="_blank">
-                            <button class="code-button">Code <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                            <button class="github-button">GitHub <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
                         </a>
                     </div>
                 </div>
@@ -171,7 +171,10 @@
                     </div>
                     <div>
                         <a href="https://github.com/reshawnlofters/tech-billionaires-analysis/blob/main/tech-billionaires-analysis.ipynb" target="_blank">
-                            <button class="demo-button button-primary">Demo</i></button>
+                            <button class="live-demo-button button-primary">Live Demo</i></button>
+                        </a>
+                        <a href="https://github.com/reshawnlofters/tech-billionaires-analysis" target="_blank">
+                            <button class="github-button">GitHub <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
                         </a>
                     </div>
                 </div>
