style(about-me): update linkedin button

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     environments. Feel free to reach me using the contact form below.
                 </p>
                 <a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
-                    <button class="button-primary">Linkedin <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                    <button class="button-primary">LinkedIn <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
                 </a>
             </div>
         </div>
