style(about-me): update paragraph

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
                 <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
                 <h2 class="role-heading">I am a Software <br><span class="multi-text">Developer</span></h2>
                 <p>
-                    I am passionate about software engineering and using technology
-                    to solve real-world problems.
+                    I am passionate about Software Engineering and using technology to solve real-world problems.
                 </p>
                 <div>
                     <a href="#contact">
@@ -75,13 +74,10 @@
             <div>
                 <h1 class="section-title">About Me</h1><hr/>
                 <p>
-                    I am a second-year Computer Science student at Ontario Tech University.
-                    My academic journey has equipped me with a solid understanding of data structures,
-                    algorithms, analytical reasoning, and effective communication, honed through work
-                    experiences and projects.<br><br>
-                    I am enthusiastic about exploring summer 2024 internship opportunities to contribute
-                    my technical proficiency and soft skills to innovative projects and collaborate in team
-                    environments. Feel free to reach me using the contact form below.
+                    My journey as a Computer Science student at Ontario Tech University has equipped me with a strong 
+                    background in data structures, algorithms, logical reasoning, and effective communication, honed 
+                    through work experiences and projects.<br><br>I am enthusiastic about exploring Software Engineering 
+                    internships to apply my knowledge and skills toward business solutions and fostering innovation.
                 </p>
                 <a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
                     <button class="button-primary">LinkedIn <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
@@ -108,11 +104,11 @@
                 </div>
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="html5 icon"><hr/>
-                    <label>HTML5</label>
+                    <label>HTML</label>
                 </div>
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="css3 icon"><hr/>
-                    <label>CSS3</label>
+                    <label>CSS</label>
                 </div>
                 <div>
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="javascript icon"><hr/>
