refractor(home): remove resume button

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                     <a href="#contact">
                         <button class="contact-me-button button-primary">Contact Me</button>
                     </a>
-                    <a href="images/Reshawn Lofters Resume.pdf" target="_blank" download>
+                    <!-- <a href="images/Reshawn Lofters Resume.pdf" target="_blank" download>
                         <button class="resume-button">Resume <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
-                    </a>
+                    </a> -->
                 </div>
             </div>
             <img src="images/astronaut-flying-with-balloon.png" alt="astronaut-riding-on-rocket">
